--- a/html/semantics/forms/textfieldselection/select-event.html
+++ b/html/semantics/forms/textfieldselection/select-event.html
@@ -1,24 +1,41 @@
 <!DOCTYPE html>
 <meta charset=utf-8>
-<title>text field selection</title>
+<title>text field selection: select()</title>
 <link rel="author" title="Denis Ah-Kang" href="mailto:denis@w3.org">
 <link rel=help href="http://www.w3.org/html/wg/drafts/html/master/#textFieldSelection">
 <script src="/resources/testharness.js"></script>
 <script src="/resources/testharnessreport.js"></script>
 <div id="log"></div>
-<input value="foobar">
 <textarea>foobar</textarea>
 <script>
-  var t1 = async_test("select() on input fires select event"),
-      t2 = async_test("select() on textarea fires select event"),
-      testEvt = function(e) {
-        assert_true(e.isTrusted, "event is trusted");
-        assert_true(e.bubbles, "event bubbles");
-        assert_false(e.cancelable, "event is not cancelable");
-      };
-  document.querySelector("input").onselect = t1.step_func_done(testEvt);
-  document.querySelector("textarea").onselect = t2.step_func_done(testEvt);
+  var input_types = ["text", "search", "tel", "url", "password"],
+      t1 = async_test("select() on textarea queues select event"),
+      q1 = false;
 
-  document.querySelector("input").select();
+  input_types.forEach(function(type) {
+    var input = document.createElement("input"),
+        t = async_test("select() on input type " + type + " queues select event"),
+        q = false;
+    input.type = type;
+    input.value = "foobar";
+    document.body.appendChild(input);
+    input.onselect = t.step_func_done(function(e) {
+      assert_true(q, "event should be queued");
+      assert_true(e.isTrusted, "event is trusted");
+      assert_true(e.bubbles, "event bubbles");
+      assert_false(e.cancelable, "event is not cancelable");
+    });
+    input.select();
+    q=true;
+  });
+
+  document.querySelector("textarea").onselect = t1.step_func_done(function(e) {
+    assert_true(q1, "event should be queued");
+    assert_true(e.isTrusted, "event is trusted");
+    assert_true(e.bubbles, "event bubbles");
+    assert_false(e.cancelable, "event is not cancelable");
+  });
+
   document.querySelector("textarea").select();
+  q1=true;
 </script>
