--- a/mediacapture-streams/obtaining-local-multimedia-content/navigatorusermedia/api-present.html
+++ b/mediacapture-streams/obtaining-local-multimedia-content/navigatorusermedia/api-present.html
@@ -14,10 +14,10 @@
     <div id='log'></div>
 <script src=/resources/testharness.js></script>
 <script src=/resources/testharnessreport.js></script>
-<script src=../../featuredetection.js></script>
+<script src="/common/vendor-prefix.js" data-prefixed-objects='[{"ancestors":["navigator"], "name":"getUserMedia"}]'></script>
 <script>
 test(function () {
-          assert_true(undefined !== BrowserHasFeature(navigator, "getUserMedia"), "navigator.getUserMedia exists");
+          assert_true(undefined !== navigator.getUserMedia, "navigator.getUserMedia exists");
       }, "getUserMedia() is present on navigator");
 </script>
 </body>
