--- a/mediacapture-streams/obtaining-local-multimedia-content/navigatorusermedia/deny.html
+++ b/mediacapture-streams/obtaining-local-multimedia-content/navigatorusermedia/deny.html
@@ -15,8 +15,7 @@
 <div id='log'></div>
 <script src=/resources/testharness.js></script>
 <script src=/resources/testharnessreport.js></script>
-<script src=../../featuredetection.js></script>
-<script src=prefix.js></script>
+<script src="/common/vendor-prefix.js" data-prefixed-objects='[{"ancestors":["navigator"], "name":"getUserMedia"}]'></script>
 <script>
 var t = async_test("Tests that the error callback is triggered when permission is denied", {timeout:10000});
 t.step(function() {
