--- a/mediacapture-streams/obtaining-local-multimedia-content/navigatorusermedia/empty-option-param.html
+++ b/mediacapture-streams/obtaining-local-multimedia-content/navigatorusermedia/empty-option-param.html
@@ -13,8 +13,7 @@
 <div id='log'></div>
 <script src=/resources/testharness.js></script>
 <script src=/resources/testharnessreport.js></script>
-<script src=../../featuredetection.js></script>
-<script src=prefix.js></script>
+<script src="/common/vendor-prefix.js" data-prefixed-objects='[{"ancestors":["navigator"], "name":"getUserMedia"}]'></script>
 <script>
 var t = async_test("Tests that getUserMedia raises a NOT_SUPPORTED_ERR exception when used with an empty options parameter");
 t.step( function () {
