--- a/mediacapture-streams/stream-api/introduction/disabled-audio-silence.html
+++ b/mediacapture-streams/stream-api/introduction/disabled-audio-silence.html
@@ -15,18 +15,12 @@
 <div id='log'></div>
 <script src=/resources/testharness.js></script>
 <script src=/resources/testharnessreport.js></script>
-<script src=../../featuredetection.js></script>
-<script src=prefix.js></script>
+<script src="/common/vendor-prefix.js" data-prefixed-objects='[{"ancestors":["navigator"], "name":"getUserMedia"}, {"ancestors":["window"], "name":"AudioContext"}]'></script>
 <script>
 var t = async_test("Tests that a disabled audio track in a MediaStream is rendered as silence", {timeout: 200000});
 var aud = document.getElementById("aud");
 t.step(function() {
   navigator.getUserMedia({audio: true}, t.step_func(function (stream) {
-    // TODO remove when prefixes are gone
-    var api = BrowserHasFeature(window, "AudioContext");
-    if (!window.AudioContext && undefined !== api) {
-       window.AudioContext = api;
-    } 
     var ctx = new AudioContext();
     var streamSource = ctx.createMediaStreamSource(stream);
     var silenceDetector = ctx.createScriptProcessor(1024);
