--- a/mediacapture-streams/stream-api/introduction/disabled-video-black.html
+++ b/mediacapture-streams/stream-api/introduction/disabled-video-black.html
@@ -16,16 +16,13 @@
 <div id='log'></div>
 <script src=/resources/testharness.js></script>
 <script src=/resources/testharnessreport.js></script>
-<script src=../../featuredetection.js></script>
-<script src=prefix.js></script>
+<script src="/common/vendor-prefix.js" data-prefixed-objects='[{"ancestors":["navigator"], "name":"getUserMedia"}]' data-prefixed-prototypes='[{"ancestors":["HTMLMediaElement"],"name":"srcObject"}]'></script>
 <script>
 var vid = document.getElementById("vid");
 var cv = document.createElement("canvas");
 var t = async_test("Tests that a disabled video track in a MediaStream is rendered as blackness", {timeout: 10000});
 t.step(function() {
   navigator.getUserMedia({video: true}, t.step_func(function (stream) {
-    // TODO remove when prefixes are gone
-    var srcObjName = FeatureNameInBrowser(vid, "srcObject");
     var testOncePlaying = function() {
        vid.removeEventListener("timeupdate", testOncePlaying, false);
        stream.getVideoTracks()[0].enabled = false;
@@ -42,7 +39,7 @@ t.step(function() {
        }
        t.done();
     }
-    vid[srcObjName] = stream;
+    vid.srcObject = stream;
     vid.play();
     vid.addEventListener("timeupdate", t.step_func(testOncePlaying), false);
 
