--- a/mediacapture-streams/stream-api/mediastream/mediastream-id-manual.html
+++ b/mediacapture-streams/stream-api/mediastream/mediastream-id-manual.html
@@ -14,8 +14,7 @@
 <div id='log'></div>
 <script src=/resources/testharness.js></script>
 <script src=/resources/testharnessreport.js></script>
-<script src=../../featuredetection.js></script>
-<script src=prefix.js></script>
+<script src="/common/vendor-prefix.js" data-prefixed-objects='[{"ancestors":["navigator"], "name":"getUserMedia"}]'></script>
 <script>
 var t = async_test("Tests that a MediaStream with a correct id is returned");
 var allowedCharacters = /^[\u0021\u0023-\u0027\u002A-\u002B\u002D-\u002E\u0030-\u0039\u0041-\u005A\u005E-\u007E]*$/;
