--- a/mediacapture-streams/stream-api/mediastream/mediastream-idl.html
+++ b/mediacapture-streams/stream-api/mediastream/mediastream-idl.html
@@ -19,8 +19,7 @@
 <div id='log'></div>
 <script src=/resources/testharness.js></script>
 <script src=/resources/testharnessreport.js></script>
-<script src=../../featuredetection.js></script>
-<script src=prefix.js></script>
+<script src="/common/vendor-prefix.js" data-prefixed-objects='[{"ancestors":["navigator"], "name":"getUserMedia"}]'></script>
 <script>
 var t = async_test("Tests that a MediaStream constructor follows the algorithm set in the spec", {timeout: 10000});
 t.step(function() {
