--- a/mediacapture-streams/stream-api/mediastream/video.html
+++ b/mediacapture-streams/stream-api/mediastream/video.html
@@ -16,8 +16,7 @@
 <div id='log'></div>
 <script src=/resources/testharness.js></script>
 <script src=/resources/testharnessreport.js></script>
-<script src=../../featuredetection.js></script>
-<script src=prefix.js></script>
+<script src="/common/vendor-prefix.js" data-prefixed-objects='[{"ancestors":["navigator"], "name":"getUserMedia"}]'></script>
 <script>
 var t = async_test("Tests that a MediaStream with at least one video track is returned");
 t.step(function() {
