--- a/mediacapture-streams/stream-api/mediastreamtrack/mediastreamtrack-end.html
+++ b/mediacapture-streams/stream-api/mediastreamtrack/mediastreamtrack-end.html
@@ -14,8 +14,7 @@
 <div id='log'></div>
 <script src=/resources/testharness.js></script>
 <script src=/resources/testharnessreport.js></script>
-<script src=../../featuredetection.js></script>
-<script src=prefix.js></script>
+<script src="/common/vendor-prefix.js" data-prefixed-objects='[{"ancestors":["navigator"], "name":"getUserMedia"}]'></script>
 <script>
 var t = async_test("Tests that the video MediaStreamTrack objects are properly ended on permission revocation", {timeout: 20000}); // longer timeout since requires user interaction
 t.step(function () {
