--- a/mediacapture-streams/stream-api/mediastreamtrack/mediastreamtrack-id.html
+++ b/mediacapture-streams/stream-api/mediastreamtrack/mediastreamtrack-id.html
@@ -14,8 +14,7 @@
 <div id='log'></div>
 <script src=/resources/testharness.js></script>
 <script src=/resources/testharnessreport.js></script>
-<script src=../../featuredetection.js></script>
-<script src=prefix.js></script>
+<script src="/common/vendor-prefix.js" data-prefixed-objects='[{"ancestors":["navigator"], "name":"getUserMedia"}]'></script>
 <script>
 var t = async_test("Tests that distinct mediastream tracks have distinct ids ", {timeout: 10000});
 t.step(function () {
