--- a/mediacapture-streams/stream-api/mediastreamtrack/mediastreamtrack-init.html
+++ b/mediacapture-streams/stream-api/mediastreamtrack/mediastreamtrack-init.html
@@ -20,8 +20,7 @@
 <script src=/resources/testharnessreport.js></script>
 <script src=/resources/webidl2/lib/webidl2.js></script>
 <script src=/resources/idlharness.js></script>
-<script src=../../featuredetection.js></script>
-<script src=prefix.js></script>
+<script src="/common/vendor-prefix.js" data-prefixed-objects='[{"ancestors":["navigator"], "name":"getUserMedia"}]'></script>
 <script>
 var t = async_test("Tests that the video MediaStreamTrack objects are properly initialized", {timeout:10000});
 var track = null
