Updated according to the review comments
1. Add a test to check  window['']
2. Remove two invalid assertions
3. Update some descriptions and etc.

--- a/html/browsers/the-window-object/named-access-on-the-window-object/named-objects.html
+++ b/html/browsers/the-window-object/named-access-on-the-window-object/named-objects.html
@@ -17,53 +17,64 @@
   <object name="a" id="obj1"></object>
   <span name="a" id="span1"></span>
 
-  <b id="b"></b>
+  <b id="b" name="c"></b>
+  <a name="c"></a>
   <iframe name="c" id="fm1"></iframe>
   <iframe name="c" id="fm2" src="test.html" onload="on_load()"></iframe>
   <input id="b"></input>
   <span id="d"></span>
+  <a name=""></a>
+  <b id=""></b>
 </div>
 <script>
 
 test(function() {
-  assert_true(window['c'] instanceof Window);
-  assert_equals(window['c'], document.getElementById("fm1").contentWindow, "The iframe should be return.");
-}, "window['name'] must return the first nested browsing context");
+  assert_equals(window['c'], document.getElementById("fm1").contentWindow, "The first iframe's window should be returned.");
+}, "Check if the first nested browsing context is returned by window['c']");
 
 test(function() {
   assert_equals(window['a'].length, 7, "The length should be 7.");
   assert_true(window['a'] instanceof HTMLCollection);
-  assert_array_equals(window['item'],
-                      [
-                        document.getElementById('a1'), document.getElementById('app1'),
+  assert_array_equals(window['a'],
+                      [ document.getElementById('a1'), document.getElementById('app1'),
                         document.getElementById('area1'), document.getElementById('embed1'),
                         document.getElementById('form1'), document.getElementById('img1'),
-                        document.getElementById('obj1')
-                      ], "The elements are not in tree order.");
-}, "window['name'] contains all a, applet, area, embed, form, img, and object elements in tree oreder");
+                        document.getElementById('obj1') ],
+                      "The elements are not in tree order.");
 
-var t = async_test("window['name'] must return the *frameset element if its name attribute matches the name");
+  document.getElementById('a1').setAttribute("name", "");
+  document.getElementById('area1').setAttribute("name", "");
+  assert_array_equals(window['a'],
+                      [ document.getElementById('app1'), document.getElementById('embed1'),
+                        document.getElementById('form1'), document.getElementById('img1'),
+                        document.getElementById('obj1') ],
+                      "Window['a'] should not contain the elements with empty name attribute.");
+}, "Check if window['a'] contains all a, applet, area, embed, form, img, and object elements, and their order");
+
+var t = async_test("Check if window['fs'] return the frameset element with name='fs'");
 function on_load () {
   t.step(function () {
-    console.log(document.getElementById('fm2').contentWindow['fs'])
-    console.log(document.getElementById('fm2').contentDocument.getElementById('fs1'));
     assert_equals(document.getElementById('fm2').contentWindow['fs'],
                   document.getElementById('fm2').contentDocument.getElementById('fs1'),
-                  "The frameset element should be return");
+                  "The frameset element should be returned.");
   });
   t.done();
 }
 
-//If the several elements have same value of their name attributes, Will the first element in tree order be chosen?
-//All of them?
 test(function() {
   assert_true(window['b'] instanceof HTMLCollection);
   assert_array_equals(window['b'], [document.getElementsByTagName('b')[0], document.getElementsByTagName('input')[0]]);
-}, "window['name'] must match named elements with the id 'b'");
+
+  document.getElementsByTagName('b')[0].setAttribute("id", "");
+  assert_equals(window['b'], document.getElementsByTagName('input')[0],
+                "The window['b'] should not contain the elements with empty id attribute.");
+}, "Check if window['b'] returns the elements with the id='b'");
 
 test(function() {
-  assert_true(window['d'] instanceof HTMLElement);
   assert_equals(window['d'], document.getElementById('d'));
-}, "window['name'] must return the element if only one element's id attribute matches the name");
+}, "Check if window['d'] returns the element with id='d'");
 
+test(function() {
+  assert_equals(window[''], undefined, "The window[''] should be undefined");
+}, "Check widow[''] when there are some elements with empty id or name attribute");
 </script>
