--- a/tools/runner/index.html
+++ b/tools/runner/index.html
@@ -78,7 +78,7 @@
         <div class="form-group">
           <label for="dumpit" class="col-sm-3 control-label">Dump JSON</label>
           <div class="col-sm-9">
-            <input type=checkbox value="yeah ok" id='dumpit'>
+            <input type=checkbox id='dumpit'>
           </div>
         </div>
         <div class="form-group" style='padding-top: 20px'>
