--- a/runner/index.html
+++ b/runner/index.html
@@ -76,7 +76,7 @@
           </div>
         </div>
         <div class="form-group">
-          <label for="dumpit" class="col-sm-3 control-label">Dump JSON</label>
+          <label for="dumpit" class="col-sm-3 control-label">Dump JSON (debug)</label>
           <div class="col-sm-9">
             <input type=checkbox id='dumpit'>
           </div>
