fix possible false positive

--- a/contributors/adobe/submitted/regions/floats/floated-regions-002.html
+++ b/contributors/adobe/submitted/regions/floats/floated-regions-002.html
@@ -21,6 +21,7 @@
 
 		.region {
 			flow-from: f;
+			background: red;
 		}
 		.region p {
 			background: red;
@@ -40,7 +41,7 @@
 	</head>
 	<body>
 		<p>
-			Test passes if you see four green squares separated by a small horizontal space.<br>
+			Test passes if you see four regularly spaced green squares.<br>
 			You should see no red.
 		</p>
 		
