fix second region to interact with first floated region

--- a/contributors/adobe/submitted/regions/floats/floated-regions-005.html
+++ b/contributors/adobe/submitted/regions/floats/floated-regions-005.html
@@ -37,6 +37,9 @@
 		.sized {
 			max-height: 100px;
 		}
+		.inline-block {
+			display: inline-block;
+		}
 		</style>
 	</head>
 	<body>
@@ -49,7 +52,7 @@
 		<div class="sized left region">
 			<p>&nbsp;</p>
 		</div>
-		<div class="region">
+		<div class="inline-block region">
 			<p>&nbsp;</p>
 		</div>
 
