fixing float interaction
The region is a block, so its positioning isn’t affected by the float.
If the float did interact with the named flow content, it would push
the content (and its margin) even further to the right.

--- a/contributors/adobe/submitted/regions/floats/floats-in-named-flow-027.html
+++ b/contributors/adobe/submitted/regions/floats/floats-in-named-flow-027.html
@@ -20,8 +20,10 @@
 		.flow {
 			flow-into: f;
 			color: blue;
-	
+			margin-left: 120px;
+			border: 10px solid lightblue;	
 		}
+
 		.float {
 			float: left;
 			color: green;
@@ -29,8 +31,7 @@
 		}
 
 		.region {
-			width: 100px;
-			border: 10px solid lightblue;
+			width: 240px;
 			flow-from: f;
 		}
 
